--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "manu",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "nodemon": "^3.1.11"
   }
 }
